# cyclonedx-rust

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: CI.yml
resources/test/: bom-1.2.xml  component-1.2.xml  metadata-1.2.xml  service-1.2.xml
src/: common.rs  component.rs  dependency_type.rs  lib.rs  metadata.rs  service.rs
src/common/: attached_text.rs  hash_type.rs  license.rs  organization.rs
src/component/: classification.rs  external_reference.rs  pedigree_type.rs  scope.rs  swid.rs
src/metadata/: attached_text.rs  classification.rs  component.rs  cyclonedx_datetime.rs  external_reference.rs  hash_type.rs  license.rs  organization.rs  pedigree_type.rs  scope.rs  swid.rs  tool_type.rs
src/service/: data_classification_type.rs  data_flow_type.rs
