[package]
name = "cyclonedx-rust"
version = "0.1.0"
authors = ["markdodgson <mark.dodgson@googlemail.com>"]
edition = "2018"
repository = "https://github.com/doddi/cyclonedx-rust"
license-file = "LICENSE"
license = "Apache-2.0"
description = "A library for encoding/decoding CycloneDx BoM"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
yaserde = "0.6.0"
yaserde_derive = "0.6.0"
xml-rs = "0.8.3"
log = "0.4"
chrono = "0.4"
uuid = { version = "0.8", features = ["v4"] }
derive_builder = "0.9.0"
heck = "0.3.2"
strum = "0.20.0"
strum_macros = "0.20.1"

[dependencies.serde_with]
version = "1.6.4"
features = ["chrono", "macros"]
